--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
     />
     <title>Dana Zhang</title>
     <script defer src="/bundle.js"></script>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300&display=swap" rel="stylesheet">
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
