added manifest to site

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="manifest" href="/manifest.json">
     <script>
       var host = "www.danaz.codes";
       if ((host == window.location.host) && (window.location.protocol != "https:")){
