--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <title>Dana Zhang - Full Stack Developer</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;600&display=swap" rel="stylesheet">
+
 
   </head>
   <body>
