added simple contact form, updates to Contact.js, Sidebar.js

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <script>
-      var host = "www.danaz.codes";
+      var host = "www.danaz.codes" || "danaz.codes";
       if ((host == window.location.host) && (window.location.protocol != "https:")){
       window.location.protocol = "https";
       }
+
       </script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <meta name="theme-color" content="#ffe400" />
     <meta
       name="description"
       content="Dana Zhang - Full Stack Developer"
