--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
     <meta name="theme-color" content="#ffe400" />
     <meta
       name="description"
-      content="Dana Zhang - Full Stack Developer"
+      content="Dana Zhang"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dana Zhang - Full Stack Developer</title>
+    <title>Dana Zhang</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
